# Tiny-Hero

./: CHANGELOG.md  README.md  haskell-boar.cabal
assets/maps/: 01.json  02.json  03.json  test.json
assets/tiles/: attack_indicator.json  dirt.json  indicator.json  water.json
src/: Config.hs  Events.hs  Game.hs  GameObjects.hs  Main.hs  Renderer.hs  Tile.hs  Update.hs
